--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,8 @@
 } outra forma de colocar css no App.tsx */
 
 body{
-    @apply bg-zinc-900 text-zinc-100
+    @apply bg-gray-900 text-gray-100;
+    -webkit-font-smoothing: antialiased;
 }
 
 /*  CMS=Content Management System 
