--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,8 +9,18 @@
 body{
     @apply bg-gray-900 text-gray-100;
     -webkit-font-smoothing: antialiased;
+
 }
 
+::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-track{
+    @apply bg-gray-500;
+}
+::-webkit-scrollbar-thumb {
+    @apply bg-black rounded;
+}
 /*  CMS=Content Management System 
 
 Traz tanto o painel de ADMIN tanto quanto a parte visual do front-end (temas)
